<resources>
    <string name="app_name">market_place</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_to_3rea">New to Bazaar?</string>
    <string name="my_sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_me">Email me</string>
    <string name="instruction4password">We will send you an email with instructions on how to reset your password.</string>
    <string name="phone_number">Phone number</string>
    <string name="Ro">+40</string>
    <string name="order_now">Order Now</string>
    <string name="title_activity_authorized_market">AuthorizedMarketActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="timeline">Timeline</string>
    <string name="my_market">My market</string>
    <string name="my_fares">My fares</string>
    <string name="profile">Profile</string>
    <string name="publish">Publish</string>
    <string name="username">Username</string>
    <string name="send_a_chat_message">Send a chat message</string>
    <string name="active">active</string>
    <string name="contact_details">Contact details</string>
    <string name="inactive">inactive</string>
    <string name="title">Title</string>
    <string name="price_amount">Price/amount</string>
    <string name="available_amount">Available amount</string>
    <string name="short_description">Short description</string>
    <string name="launch_my_fair">Launch my fair</string>
    <string name="preview_my_fair">Preview my fair</string>
    <string name="total_items">Total items</string>
    <string name="price_item">Price/item</string>
    <string name="solid_items">Solid items</string>
    <string name="review">Review</string>
    <string name="ongoing_sales">Ongoing Sales</string>
    <string name="sold_items">Sold items</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</string>
    <string name="place_your_order_and_track_it_s_availability_before_you_send_revolut_payment">Place your order and track it’s availability before you send Revolut payment!</string>
    <string name="comment">Comment</string>
</resources>