<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#212121"
        tools:context=".fragments.authorization.RegisterFragment"
        android:padding="10dp"
        android:weightSum="7"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                android:textAppearance="@style/log_in"
                android:lineSpacingExtra="3sp"
                android:translationY="-1.38sp"
                android:gravity="top"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/first_name"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24"
            app:endIconTint="@color/wrapedWhite"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:strokeWidth="4"
            android:strokeColor="#00B5C0"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/last_name"
            app:helperTextTextColor="@color/red"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24"
            app:endIconTint="@color/wrapedWhite"
            app:endIconMode="clear_text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:strokeWidth="4"
            android:strokeColor="#00B5C0"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:strokeWidth="4"
            android:strokeColor="#00B5C0"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            app:helperTextTextColor="@color/red"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/wrapedWhite"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="40"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:boxStrokeColor="@color/teal_primary"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            app:helperTextTextColor="@color/red"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
            app:startIconTint="@color/wrapedWhite"
            app:prefixText="@string/Ro"
            app:prefixTextColor="@color/wrapedWhite"
            app:counterEnabled="true"
            app:counterMaxLength="9"
            app:counterTextColor="@color/wrapedWhite"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="40"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:boxStrokeColor="@color/teal_primary"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:gravity="center"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="26dp"
                android:textColor="@color/black"
                android:text="@string/register"
                android:backgroundTint="@color/teal_primary"
                >
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/already_have_an_account"
                android:textColor="@color/wrapedWhite"/>

            <TextView
                android:id="@+id/already_have_an_account_click"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:text="@string/log_in"
                android:textColor="@color/teal_primary"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
