<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#212121"
        tools:context=".fragments.authorization.ForgotPasswordFragment"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/forgot_password"
                android:textAppearance="@style/log_in"
                android:lineSpacingExtra="3sp"
                android:translationY="-1.38sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/new_to_3rea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:text="@string/instruction4password"
                android:textAppearance="@style/new_to_3rea"
                android:lineSpacingExtra="0sp"
                android:gravity="top"
                />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            app:helperText="*Required"
            app:helperTextTextColor="@color/red"
            app:endIconMode="custom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:strokeWidth="4"

            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:textCursorDrawable="@color/teal_primary"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:gravity="center">
            <Button
                android:id="@+id/btn_email_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="26dp"
                android:textColor="@color/black"
                android:text="@string/email_me"
                android:backgroundTint="@color/teal_primary"
                >
            </Button>
        </LinearLayout>


    </LinearLayout>

</ScrollView>
