<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileDetailsFragment"
    android:background="@color/black"
    android:weightSum="7"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/big_profile_image"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="30dp"
        android:src="@drawable/ic_avatar_svgrepo_com"/>

    <TextView
        android:id="@+id/profile_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/big_profile_image"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/wrapedWhite"
        android:textSize="25dp"></TextView>
    <LinearLayout
        android:layout_below="@+id/profile_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:weightSum="7"
        android:orientation="vertical">
        <TextView
            android:layout_weight="1"
            android:id="@+id/email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/wrapedWhite"
            android:paddingLeft="10dp"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_email_textview"
            android:textColor="@color/wrapedWhite"
            android:textSize="20dp" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/username_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/wrapedWhite"
            android:paddingLeft="10dp"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_username_textview"
            android:textColor="@color/wrapedWhite"
            android:textSize="20dp" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/phone_number_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/wrapedWhite"
            android:paddingLeft="10dp"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_phone_number_textview"
            android:textColor="@color/wrapedWhite"
            android:textSize="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="50dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send_a_chat_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:strokeWidth="2dp"
                app:cornerRadius="26dp"
                android:text="@string/send_a_chat_message"
                android:textSize="12sp"
                android:textColor="@color/white"
                app:strokeColor="@color/white"

                />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
</ScrollView>