<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:background="@color/black"
    android:weightSum="7"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/big_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:padding="30dp"
        android:src="@drawable/ic_avatar_svgrepo_com" />
        <TextView
            android:id="@+id/profile_name_textview"
            android:layout_below="@id/big_profile_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/wrapedWhite"
            android:gravity="center"
            android:textSize="25dp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@id/profile_name_textview"
            android:id="@+id/email_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/wrapedWhite"
            app:helperTextTextColor="@color/red"
            app:endIconMode="custom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:strokeWidth="4"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:textCursorDrawable="@color/teal_primary"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/email_input_layout"
            android:id="@+id/username_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/last_name"
            app:helperTextTextColor="@color/red"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24"
            app:endIconTint="@color/wrapedWhite"
            app:endIconMode="clear_text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:strokeWidth="4"
            android:strokeColor="#00B5C0"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"

                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/username_input_layout"
            android:id="@+id/phone_number_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            app:helperTextTextColor="@color/red"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
            app:startIconTint="@color/wrapedWhite"
            app:prefixText="@string/Ro"
            app:prefixTextColor="@color/wrapedWhite"
            app:counterEnabled="true"
            app:counterMaxLength="9"
            app:counterTextColor="@color/wrapedWhite"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/white"
                android:id="@+id/phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="40"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:boxStrokeColor="@color/teal_primary"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/phone_number_input_layout"
            android:id="@+id/password_input_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            app:helperTextTextColor="@color/red"
            android:textColor="@color/wrapedWhite"
            app:endIconMode="password_toggle"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:errorIconDrawable="@drawable/ic_error_mark"
            app:errorIconTint="@color/red"
            app:errorEnabled="false"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="40"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:boxStrokeColor="@color/teal_primary"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_below="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="26dp"
            android:textColor="@color/black"
            android:text="@string/publish"
            android:backgroundTint="@color/teal_primary"
            >
        </Button>
    </LinearLayout>


</RelativeLayout></ScrollView>